fix on claim method